--- a/cycling.html
+++ b/cycling.html
@@ -275,7 +275,7 @@
 
         </p>
         <p>
-            Get the train to Guildford or Dorking (both pretty frequent and quick) and take whatever bridleways you fancy - they&#39;re all prety decent. If you want a big day out, do one to the other, joining up trails. For some reason, the ticket inspectors seem happy if you have a return to either station.
+            Get the train to Guildford or Dorking (both pretty frequent and quick) and take whatever bridleways you fancy - they&#39;re all pretty decent. If you want a big day out, do one to the other, joining up trails. For some reason, the ticket inspectors seem happy if you have a return to either station.
         </p>
         <h3>
             Cwmcarn (Wales)
