--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@ TODO
 - political theories and team styles - strong man theory
 - typed lambda calculus
 - ask someone about where 1 + 1 = 2 is a proof - https://math.stackexchange.com/questions/4410936/does-a-particular-statement-in-lambda-calculus-count-as-a-proof
-- the energy industry and paying for stuff
+- the energy industry and paying for stuff - insanity of WHD
 - incidental complexity and caching
-- cyling in the south east
 - proper write up of leet gist
 
  -->
