--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!--
 TODO
+- testing React perfomance with and without global state (and with immer)
 - microservice middleground
 - popper and agile DOI:10.1007/11787181_26
 - political theories and team styles - strong man theory
@@ -7,8 +8,6 @@ TODO
 - ask someone about where 1 + 1 = 2 is a proof - https://math.stackexchange.com/questions/4410936/does-a-particular-statement-in-lambda-calculus-count-as-a-proof
 - the energy industry and paying for stuff - insanity of WHD
 - incidental complexity and caching
-- proper write up of leet gist
-
  -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
