--- a/consciousness.html
+++ b/consciousness.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <a href="index.html"><img style="height:2em" src="pic.png"/>⇦</a>
+    <p><em>If you prefer videos, I did <a href="https://www.youtube.com/watch?v=XD3-7d8n0lw">a talk</a> that is basically a rehash of this post.</em></p>
     <h1>A developer's summary of Consciousness and the Social Brain</em></h1>
     <p>
         "<a href="https://global.oup.com/academic/product/consciousness-and-the-social-brain-9780199928644">Consciousness and the Social Brain</a>" is a book by Princeton neuroscience professor <a href="https://en.wikipedia.org/wiki/Michael_Graziano">Michael Graziano</a>, outlining his theory of consciousness - <b>the attention schema theory</b>.
