add rebase diff

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ TODO
             <li>Stop doing <a href="sane-config.html">mad config</a></li>
             <li>While you're there, just <a href="mostly-pointless.html">stop doing OO so much</a></li>
             <li>A <a href="recursing-with-yield.html">tiny</a> bit about recursing with the yield statement</li>
-            <li>I can never remember how to <a href="git-bisect.html">git bisect</a></li>
+            <li>I can never remember how to <a href="git-bisect.html">git bisect</a>, or <a href="git-rebase-diff.html">git diff after a rebase</a></li>
             <li><a href="semi-isomorphic.html">Evolving</a> backend → frontend rendered Python/JS apps with dnjs</li>
         </ul>
     </p>
