--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!--
 TODO
-- testing React perfomance with and without global state (and with immer)
-- microservice middleground
+- testing React perfomance with and without global state (and with immer) and with Recoil. Test with 1000s of x, y coordinate boxes
+- microservice middleground - see WIP
+- can your type system do this? TypeScript
+- ORM critiques, SQLAlchemy and preventing magic objects leaking out + can your ORM do this?
 - popper and agile DOI:10.1007/11787181_26
 - political theories and team styles - strong man theory
 - typed lambda calculus
