--- a/index.html
+++ b/index.html
@@ -80,9 +80,15 @@ TODO
     </p>
     <br>
     <p>
-        <b>Non-programming</b>.
+        <b>Cycling</b>.
         <ul>
-            <li><a href="cycling.html">Cycling</a> day-trips from Central London</li>
+            <li><a href="cycling-in-london.html">Guide for n00bs</a> cycling in London</li>
+            <li><a href="cycling.html">Day trips</a> from Central London</li>
+        </ul>
+    </p>
+    <p>
+        <b>Other junk</b>.
+        <ul>
             <li>A <a href="consciousness.html">summary</a> of the book "Consciousness and the Social Brain"</li>
             <li>Check out my weird <a href="https://soundcloud.com/leontrolski">music</a>.</li>
         </ul>
