--- a/virtualenvs-for-node-devs.html
+++ b/virtualenvs-for-node-devs.html
@@ -1,5 +1,5 @@
 <html>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <head>
         <title>
             leontrolski -             virtualenvs for Node devs
@@ -11,8 +11,9 @@
             pre {width: 100%; border-top: 3px solid gray; border-bottom: 3px solid gray;}
             a {border-bottom: 1px solid #444444; color: #444444; text-decoration: none; text-shadow: 0 1px 0 #ffffff; }
             a:hover {border-bottom: 0;}
-            .inline {background: #b3b2b226; padding-left: 0.3em; padding-right: 0.3em;}
+            .inline {background: #b3b2b226; padding-left: 0.3em; padding-right: 0.3em; white-space: nowrap;}
             blockquote {font-style: italic;color:black;background-color:#f2f2f2;padding:2em;}
+            details {border-bottom:solid 5px gray;}
         
         </style>
         <link href="https://unpkg.com/prism-themes@1.4.0/themes/prism-vs.css" rel="stylesheet">
@@ -34,25 +35,24 @@
             s for Node devs
         </h1>
         <p>
-            You&#x27;ve started doing some Python while working with another team, and they&#x27;ve told you to do everything in             <code class="inline">virtualenv</code>
-            s as it&#x27;s the right way. You&#x27;ve also been told Python&#x27;s packaging system is a bit of a mess, let&#x27;s try tame it somewhat.
+            You&#39;ve started doing some Python while working with another team, and they&#39;ve told you to do everything in             <code class="inline">virtualenv</code>
+            s as it&#39;s the right way. You&#39;ve also been told Python&#39;s packaging system is a bit of a mess, let&#39;s try tame it somewhat.
         </p>
         <p>
-            We&#x27;re going to compare             <code class="inline">npm</code>
-             to the &quot;modern classic&quot; Python equivalent. I&#x27;m going to ignore more recent developments like             <a href="https://python-poetry.org/">
+            We&#39;re going to compare             <code class="inline">npm</code>
+             to the &#34;modern classic&#34; Python equivalent. I&#39;m going to ignore more recent developments like             <a href="https://python-poetry.org/">
                 poetry
             </a>
              and friends.
         </p>
         <p>
-            First, do you have the right Python version installed? We&#x27;re going to use             <a href="https://asdf-vm.com">
+            First, do you have the right Python version installed? We&#39;re going to use             <a href="https://asdf-vm.com">
                 asdf
             </a>
              which supports Node, Ruby, Python, etc. Steps to install for me were:
         </p>
         <pre class="language-bash"><code>brew install asdf
-echo -e &quot;
-. $(brew --prefix asdf)/asdf.sh&quot; &gt;&gt; ~/.zshrc
+echo -e &#34;\n. $(brew --prefix asdf)/asdf.sh&#34; &gt;&gt; ~/.zshrc
 # switch to a new shell window at this point
 asdf plugin-add python
 asdf install python 3.9.1
@@ -61,7 +61,7 @@ which python3  # should give you ~/.asdf/shims/python3
 python3 --version # should give you 3.9.1</code>
 </pre>
         <p>
-            OK, so we&#x27;ve got a Python version that seems sane, let&#x27;s set up a             <code class="inline">virtualenv</code>
+            OK, so we&#39;ve got a Python version that seems sane, let&#39;s set up a             <code class="inline">virtualenv</code>
              with the equivalent of             <code class="inline">npm init</code>
             .
         </p>
@@ -104,12 +104,12 @@ python3 --version # should give you 3.9.1</code>
              or whatever, but             <code class="inline">virtualenv</code>
             s come with a special trick file to add             <code class="inline">.env/bin</code>
              to             <code class="inline">bash</code>
-            &#x27;s PATH. Let&#x27;s run it:
+            &#39;s PATH. Let&#39;s run it:
         </p>
         <pre class="language-bash"><code>source .env/bin/activate</code>
 </pre>
         <p>
-            Now everything should be set up. Let&#x27;s try:
+            Now everything should be set up. Let&#39;s try:
         </p>
         <pre class="language-bash"><code>(.env) ➜ echo $PATH
 /Users/user/src/my-special-project/.env/bin:/usr/local/bin:/usr/bin:/bin
@@ -122,14 +122,14 @@ Python 3.9.1</code>
 </pre>
         <p>
             The main difference from             <code class="inline">npm</code>
-             here is we don&#x27;t have to run anything with             <code class="inline">npm run ...</code>
-             as we&#x27;ve hacked with the PATH.
+             here is we don&#39;t have to run anything with             <code class="inline">npm run ...</code>
+             as we&#39;ve hacked with the PATH.
         </p>
         <h2 id="installing-stuff">
             Installing stuff
         </h2>
         <p>
-            Let&#x27;s install             <code class="inline">flask</code>
+            Let&#39;s install             <code class="inline">flask</code>
             :
         </p>
         <pre class="language-bash"><code>pip install flask</code>
@@ -152,7 +152,7 @@ Python 3.9.1</code>
         <p>
             As you can see,             <code class="inline">.env/lib/python3.9/site-packages</code>
              is a lot like             <code class="inline">node_modules</code>
-            . We can see all the library&#x27;s files:
+            . We can see all the library&#39;s files:
         </p>
         <pre class="language-bash"><code>(.env) ➜ ls .env/lib/python3.9/site-packages/flask
 __init__.py     _compat.py      cli.py          debughelpers.py json            signals.py      views.py
@@ -165,15 +165,15 @@ __pycache__     blueprints.py   ctx.py          helpers.py      sessions.py     
         </p>
         <pre class="language-javascript"><code>{
     ...
-    &quot;dependencies&quot;: {
-      &quot;express&quot;: &quot;^4.17.1&quot;
+    &#34;dependencies&#34;: {
+      &#34;express&#34;: &#34;^4.17.1&#34;
     }
 }</code>
 </pre>
         <p>
             Python is a fair bit different from Node in that only one version of a package can be installed in a             <code class="inline">virtualenv</code>
              at a time. This means you tend to have abstract requirements (that is to say with very limited version pinning) listed in             <code class="inline">setup.py|requirements.in|pyproject.toml</code>
-             and pinned requirements (for testing/deployent if you&#x27;re working on a service) in a             <code class="inline">requirements.txt</code>
+             and pinned requirements (for testing/deployent if you&#39;re working on a service) in a             <code class="inline">requirements.txt</code>
             .
         </p>
         <p>
@@ -187,7 +187,7 @@ __pycache__     blueprints.py   ctx.py          helpers.py      sessions.py     
         </p>
         <p>
             In terms of pinning requirements in your own project a la             <code class="inline">yarn lock</code>
-             or whatever the flavour of the month is, I&#x27;ve always been a fan of             <a href="https://github.com/jazzband/pip-tools">
+             or whatever the flavour of the month is, I&#39;ve always been a fan of             <a href="https://github.com/jazzband/pip-tools">
                 pip-tools
             </a>
              - using this means you can safely ignore the last few years of Python packaging excitement and get on with your life.
@@ -196,4 +196,3 @@ __pycache__     blueprints.py   ctx.py          helpers.py      sessions.py     
     </body>
 
 </html>
-
