update index and add popper

--- a/index.html
+++ b/index.html
@@ -28,7 +28,21 @@ TODO
     <p>
         I'm <b>Oliver Russell</b>, a Python dev (amongst other things) based in London, reach me at ojhrussell[at]gmail.com, subscribe via <a href="https://leontrolski.github.io/leontrolski.rss">rss</a>, read my <a href="oliver-russell-cv.pdf">CV</a>.
     </p>
-    <p>
+    <br>
+    <div>
+        <div><code><a href="#database-tips">Database tips</a></code></div>
+        <div><code><a href="#minimal-versions">Minimal versions</a></code></div>
+        <div><code><a href="#cs-essentials">Computer science essentials</a></code></div>
+        <div><code><a href="#coding-bits-and-bobs">Python/Javscript bits and bobs</a></code></div>
+        <div><code><a href="#what-ifs">What ifs</a></code></div>
+        <div><code><a href="#cycling">Cycling</a></code></div>
+        <div><code><a href="#other">Other</a></code></div>
+        <div><code><a href="#gists">Github gists</a></code></div>
+        <div><code><a href="#projects">Github projects</a></code></div>
+        <div><code><a href="#game">Blocks game</a></code></div>
+    </div>
+    <br>
+    <p id="database-tips">
         Handy <b>database tips</b>. <em>According to Google, these are way more interesting than anything else here</em>.
         <ul>
             <li>SQLAlchemy <a href="sqlalchemy-relationships.html">relationship loading</a> techniques with examples</li>
@@ -36,14 +50,14 @@ TODO
             <li>Don't get bitten by missing <a href="foreign-key-indexes.html">foreign key indexes</a></li>
         </ul>
     </p>
-    <p>
+    <p id="minimal-versions">
         A series of posts where I reimplement a <b>minimal version</b> of something to demonstrate how it works.
         <ul>
             <li><a href="33-line-react.html">33 line React</a>-like library, and <a href="33-line-react-thoughts.html">followup</a>, also a <a href="96-line-react-jsx.html">96 line React with JSX</a></li>
             <li>Ever wondered what the hell is going on with your <code>pandas.DataFrame</code>, check <a href="fake-data-frame.html">this</a> out</li>
         </ul>
     </p>
-    <p>
+    <p id="cs-essentials">
         Weenie posts reducing some <b>computer science</b> concept down to its essentials. <em>There are many different takes on these topics scattered across the internet.</em>
         <ul>
             <li>Tips for tricky <a href="leet.html">leet code</a> style questions in interviews</li>
@@ -53,7 +67,7 @@ TODO
             <li>A half-baked post demonstrating a simple <a href="pratt-example.html">Pratt parser</a></li>
         </ul>
     </p>
-    <p>
+    <p id="coding-bits-and-bobs">
         <b>Python/JavaScript/TypeScript</b> and bobs.
         <ul>
             <li><a href="strongly-typed-http.html">Strongly type</a> your Web 1.0 interfaces</li>
@@ -65,7 +79,7 @@ TODO
             <li><a href="semi-isomorphic.html">Evolving</a> backend → frontend rendered Python/JS apps with dnjs</li>
         </ul>
     </p>
-    <p>
+    <p id="what-ifs">
         <b>What-ifs</b>.
         <ul>
             <li>What if we'd had <a href="dom-syntax.html">nice html-in-js syntax</a> from the beginning?</li>
@@ -74,27 +88,27 @@ TODO
             <li>A piece about potential <a href="nested-sql.html">nested SQL queries</a></li>
         </ul>
     </p>
-    <br>
-    <p>
-        Random <b><a href="https://gist.github.com/leontrolski">gists</a></b>.
-    </p>
-    <br>
-    <p>
+    <p id="cycling">
         <b>Cycling</b>.
         <ul>
             <li><a href="cycling-in-london.html">Guide for n00bs</a> cycling in London</li>
             <li><a href="cycling.html">Day trips</a> from Central London</li>
         </ul>
     </p>
-    <p>
+    <p id="other">
         <b>Other junk</b>.
         <ul>
-            <li>A <a href="consciousness.html">summary</a> of the book "Consciousness and the Social Brain"</li>
-            <li>Check out my weird <a href="https://soundcloud.com/leontrolski">music</a>.</li>
+            <li><a href="consciousness.html">Summary</a> of the book "Consciousness and the Social Brain"</li>
+            <li>Karl Popper essay - <a href="popper-reality.html">Ideal and reality in society</a></li>
+            <li>Check out my weird <a href="https://soundcloud.com/leontrolski">music</a></li>
         </ul>
     </p>
     <br>
-    <p>
+    <p id="gists">
+        Random <b><a href="https://gist.github.com/leontrolski">gists</a></b>.
+    </p>
+    <br>
+    <p id="projects">
         Here are some of my <b>projects</b>, none of them are particularly prod-ready, just things that have scratched various itches over the years.
         <ul>
             <li><a href="https://github.com/leontrolski/sqlski">sqlski</a> - postgres-side nesting of data for Python</li>
@@ -107,7 +121,7 @@ TODO
     </p>
     <br>
     <br>
-    <p>Below is a minimalist blocks game, see the page source to see how it works!</p>
+    <p id="game">Below is a minimalist blocks game, see the page source to see how it works!</p>
     <div id="blocks"></div>
     <style>
         .row {display: flex;}
