--- a/cycling-in-london.html
+++ b/cycling-in-london.html
@@ -195,7 +195,7 @@
             Staying safe
         </h2>
         <p>
-            Tips on staying safe:
+            Once you&#39;re off the main roads (see above), cycling in London is pretty safe, in fact it feels a lot safer than in most other UK cities. To reduce the likelihood of being involved in a crash, here are some tips on staying safe, take time to ingest them properly.
         </p>
         <ul>
             <li>
