--- a/consciousness.html
+++ b/consciousness.html
@@ -24,10 +24,10 @@
 
     <h2>Intro</h2>
     <p>
-        As a first year student I attended a talk by <a href="https://en.wikipedia.org/wiki/Susan_Blackmore">Susan Blackmore</a> on consciousness. She is an engaging and thought-provoking speaker - that talk led me to reading further on the topic including her "best of" book "<a href="https://www.susanblackmore.uk/conversations-on-consciousness/">Conversations on Consciousness</a>" in which she talks to a wide spectrum of thinkers on <a href="https://en.wikipedia.org/wiki/Hard_problem_of_consciousness">the hard problem</a>.
+        As a first year student I attended a talk by <a href="https://en.wikipedia.org/wiki/Susan_Blackmore">Susan Blackmore</a> on consciousness. She's a great speaker, and that talk led me to reading further on the topic including her "best of" book "<a href="https://www.susanblackmore.uk/conversations-on-consciousness/">Conversations on Consciousness</a>" in which she talks to a wide spectrum of thinkers on <a href="https://en.wikipedia.org/wiki/Hard_problem_of_consciousness">the hard problem</a>.
     </p>
     <p>
-        A few years later, book three or four on the topic blew my mind in its clarity and concision - "Consciousness and the Social Brain" by Michael Graziano. The title is slightly misleading (to me at least) in that it implies his theory might be limited in scope to what our brain does as we interact with other people. Instead it is a simple, materialist theory of mind accompanied by series of observations from neuroscience that support the theory. On finishing the book you may find that the hard problem don't seem so hard after all.
+        A few years and a few books later, one book in particular stood out for its clarity and concision - "Consciousness and the Social Brain" by Michael Graziano. The title is slightly misleading (to me at least) in that it implies his theory might be limited in scope to what our brain does as we interact with other people. Instead it is a simple, materialist theory of mind accompanied by series of observations from neuroscience that support the theory. On finishing the book you may find that the hard problem don't seem so hard after all.
     </p>
 
     <h2>Define consciousness</h2>
