--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ TODO
     <p id="coding-bits-and-bobs">
         <b>Python/JavaScript/TypeScript</b> and bobs.
         <ul>
+            <li><a href="cmd-click-manifesto.html">The CMD-click manifesto</a></li>
             <li><a href="strongly-typed-http.html">Strongly type</a> your Web 1.0 interfaces</li>
             <li>Python <a href="virtualenvs-for-node-devs.html">virtualenvs</a> for Node devs</li>
             <li>Stop doing <a href="sane-config.html">mad config</a></li>
