--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ TODO
         <b>Python/JavaScript/TypeScript</b> and bobs.
         <ul>
             <li><a href="cmd-click-manifesto.html">The CMD-click manifesto</a></li>
+            <li>mypyc is <a href="mypyc-quick.html">quick</a></li>
             <li><a href="strongly-typed-http.html">Strongly type</a> your Web 1.0 interfaces</li>
             <li>Python <a href="virtualenvs-for-node-devs.html">virtualenvs</a> for Node devs</li>
             <li>Stop doing <a href="sane-config.html">mad config</a></li>
